# kalman

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build.yml
cmake/: CodeCoverage.cmake  common_macros.cmake  doxygen.cmake
src/: CMakeLists.txt
src/exec/: CMakeLists.txt
src/exec/myexec/: CMakeLists.txt  myexec.cpp
src/lib/kalman/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.tpp
src/lib/kalman/include/kalman/: kalman_filter.hpp  kalman_filter.tpp
src/lib/kalman/test/: CMakeLists.txt  kalman_filter-tests.cpp
src/lib/mylib/: CMakeLists.txt  mylib.cpp
src/lib/mylib/include/mylib/: myheader.hpp
src/lib/mylib/test/: CMakeLists.txt  mylib-tests.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: CMakeLists.txt  conan-test.cpp
